# twittergram

./: .env.exemple  .gitignore  README.md  README.rst  go.mod  go.sum  main.go  pyproject.toml  requirements.txt
twittergram/: __init__.py  __main__.py  bot.py  config.py.sample  example.config.py  handler.go
twittergram/database/: __init__.py  chats.py  database.go  locales.py
twittergram/locales/: __init__.py  en-US.yml  en_US.yaml  pt-BR.yml  pt_BR.yaml
twittergram/localization/: localization.go
twittergram/localization/localizations/: en-us.json  pt-br.json
twittergram/modules/: start.go  twitter.go  types.go  utils.go
twittergram/plugins/: __init__.py  start.py  twittegram.py  twitter.py
twittergram/twitter/: api.go  types.go  utils.go
twittergram/utils/: __init__.py  twitter.py
