[tool.poetry]
name = "Twittergram"
version = "1.0.0"
description = "Twittergram is a bot for telegram with some Twitter related functions."
repository = "https://github.com/ruizlenato/SmudgeLord"
authors = ["ruizlenato <ruizlenato@proton.me>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.11"
pyrogram = {git = "https://github.com/AmanoTeam/pyrogram.git"}
tgcrypto = "^1.2.5"
uvloop = "^0.17.0"
aiosqlite = "^0.19.0"
httpx = {extras = ["http2"], version = "^0.24.1"}
filetype = "^1.2.0"
pyaml = "^23.7.0"
babel = "^2.12.1"


[tool.ruff]
line-length = 99
show-fixes = true
target-version = "py311"
select = [
  "E", # pycodestyle
  "I", # isort
  "F", # pyflakes
  "UP",  # pyupgrade
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "RET", # flake8-return
]
exclude = ["config.py"]

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.ruff.isort]
known-first-party = ["twittergram"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
